database/css/style.css
table, th, td 
{
    border: 1px solid;
}

table
{
    display:block;
    overflow-x: auto;
    white-space: nowrap;
}

#searchResults
{
    display: none; 
}

